# ShiftWise

./: .gitignore  CMakeLists.txt  STATUS.md  deploy.bat
installer/: shiftwise.iss
migrations/: migration_001.sql
resources/: resources.qrc  shiftwise.rc
resources/styles/: dark.qss  light.qss
src/app/: AppSettings.cpp  AppSettings.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  main.cpp
src/domain/: Scheduler.cpp  Scheduler.h  TimeUtils.h
src/domain/models/: Assignment.h  Availability.h  Employee.h  Role.h  Schedule.h  ShiftTemplate.h
src/domain/repositories/: AvailabilityRepository.cpp  AvailabilityRepository.h  EmployeeRepository.cpp  EmployeeRepository.h  RoleRepository.cpp  RoleRepository.h  ScheduleRepository.cpp  ScheduleRepository.h  ShiftTemplateRepository.cpp  ShiftTemplateRepository.h
src/infra/: DatabaseManager.cpp  DatabaseManager.h  MigrationRunner.cpp  MigrationRunner.h
src/ui/dialogs/: EmployeeDialog.cpp  EmployeeDialog.h  RoleDialog.cpp  RoleDialog.h  ShiftTemplateDialog.cpp  ShiftTemplateDialog.h
src/ui/pages/: EmployeesPage.cpp  EmployeesPage.h  ReportsPage.cpp  ReportsPage.h  RolesPage.cpp  RolesPage.h  SchedulePage.cpp  SchedulePage.h  SettingsPage.cpp  SettingsPage.h  ShiftsPage.cpp  ShiftsPage.h
tests/: CMakeLists.txt  test_main.cpp
